# msr-skills-md

./: .env.example  .gitignore  DATA_COLLECTION.md  README.md  blacklist.txt  pyproject.toml  relevance_terms.txt
docs/: 2026-02-21_Pipeline.drawio  2026-03-02_Pipeline.drawio  2026-03-17_Pipeline.drawio  pipeline.drawio  screening_methodology_update.md
outputs/: full_skills_instances.csv  name_filtered_repos.tsv  name_filtered_repos_counts.json  processing_failures.tsv  skill_md_scan_results.csv  skill_md_scan_results_errors.csv  skill_md_scan_results_filtered.csv  skill_md_scan_results_found.csv  skill_md_scan_results_found_filtered.csv  skill_md_scan_results_not_found.csv  skill_md_scan_results_skill_only_new_acfs.csv  skill_md_scan_results_skill_only_new_acfs_errors.csv  skill_md_scan_results_skill_only_new_acfs_filtered.csv  skill_md_scan_results_skill_only_new_acfs_found.csv  skill_md_scan_results_skill_only_new_acfs_not_found.csv  skill_md_shortlist.csv
src/: A_extract_skill_repos.py  A_github_search.py  B_extract_skill_repos.py  B_generate_dataset.py  C_generate_dataset.py  enrich_extended_acf_columns.py  enrich_scan_contributors.py  extract_skill_repos.py  extract_skill_repos_tree.py  fetch_repo_metadata_readmes.py  filters.py  find_skills_md.py  generate_dataset.py  generate_screening_outputs.py  screening.py  search_github_repos.py
tests/: test_A_extract_skill_repos.py  test_B_extract_skill_repos.py  test_B_generate_dataset.py  test_C_generate_dataset.py  test_enrich_scan_contributors.py  test_extract_skill_repos.py  test_extract_skill_repos_tree.py  (+10 more)
(+557 files in other folders)
