[project]
name = "msr-skills-md"
version = "0.1.0"
description = "Mine GitHub repositories for SKILL.md files using SEART CSV exports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
