[project]
name = "msr-skills-md"
version = "0.1.0"
description = "Mine GitHub repositories for SKILL.md files using SEART CSV exports"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.4.0",
    "matplotlib>=3.10.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
